Cleanup code and refactor