@@ -19,9 +19,6 @@
 
 package me.moros.bending.util;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import me.moros.atlas.cf.checker.nullness.qual.NonNull;
@@ -34,21 +31,21 @@ import org.bukkit.potion.PotionEffectType;
  * Utility class to handle potion effects on entities.
  */
 public final class PotionUtil {
-  private static final Set<PotionEffectType> POSITIVE = new HashSet<>(Arrays.asList(
+  private static final Set<PotionEffectType> POSITIVE = Set.of(
     PotionEffectType.ABSORPTION, PotionEffectType.DAMAGE_RESISTANCE, PotionEffectType.FAST_DIGGING,
     PotionEffectType.FIRE_RESISTANCE, PotionEffectType.HEAL, PotionEffectType.HEALTH_BOOST,
     PotionEffectType.INCREASE_DAMAGE, PotionEffectType.JUMP, PotionEffectType.NIGHT_VISION,
     PotionEffectType.REGENERATION, PotionEffectType.SATURATION, PotionEffectType.SPEED,
     PotionEffectType.WATER_BREATHING
-  ));
-  private static final Set<PotionEffectType> NEUTRAL = new HashSet<>(Collections.singletonList(
+  );
+  private static final Set<PotionEffectType> NEUTRAL = Set.of(
     PotionEffectType.INVISIBILITY
-  ));
-  private static final Set<PotionEffectType> NEGATIVE = new HashSet<>(Arrays.asList(
+  );
+  private static final Set<PotionEffectType> NEGATIVE = Set.of(
     PotionEffectType.POISON, PotionEffectType.BLINDNESS, PotionEffectType.CONFUSION,
     PotionEffectType.HARM, PotionEffectType.HUNGER, PotionEffectType.SLOW,
     PotionEffectType.SLOW_DIGGING, PotionEffectType.WEAKNESS, PotionEffectType.WITHER
-  ));
+  );
 
   public static boolean isPositive(@NonNull PotionEffectType type) {
     return POSITIVE.contains(type);
